--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,4 @@
 .nav {
-    font-family: 'Rubik', sans-serif;
     font-size: 2rem;
     color: white;
     width: 100%;
@@ -19,6 +18,10 @@
     margin-right: 2rem;
     text-decoration: none;
     color: white;
+}
+
+.nombre {
+    cursor:pointer;
 }
 
 @media(max-width: 768px){
