routing primer commit

--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,12 +1,11 @@
 .contador {
-    width: 100%;
+    width: 45%;
     display:flex;
     justify-content: space-between;
     align-items: center;
     background-color: #ffe4ec;
-    padding: 0.5rem;
+    padding: 1rem;
     border-radius: 0.5rem;
-    margin-top: 1rem;
 }
 
 .cantidad {
@@ -17,19 +16,20 @@
 }
 
 .contenedor {
-    width: 28.4rem;
+    width: 43rem;
+    height: 4rem;
+    display: flex;
 }
 
 .boton-carrito {
-    padding: 0.8rem;
-    margin-top: 1rem;
-    width: 100%;
+    padding: 0.9rem;
+    width: 25rem;
     border-style:hidden;
     border-radius: 0.5rem;
     color:white;
     cursor: pointer;
     background-color: #fa8fb1;
-    margin-bottom: 1rem;
+    margin-left: 1.5rem;
 }
 
 .botones {
@@ -42,3 +42,4 @@
     background-color: #fa8fb1;
     cursor: pointer;
 }
+
