--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,8 +1,8 @@
 .img {
     background-position: center;
     background-size: cover;
-    width: 28.4rem;
-    height: 40rem;
+    width: 28.1rem;
+    height: 39rem;
     border-radius: 1rem;
 }
 
@@ -10,9 +10,11 @@
     font-size: 2.3rem;
     text-transform: uppercase;
     font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .price {
+    font-family: 'Open Sans', sans-serif;
     font-size: 2.6rem;
     font-weight: 700;
 }
@@ -24,4 +26,35 @@
     align-items: center;
     border: .1vw solid #ffc1d5;
     border-radius: 1rem;
+}
+
+.comprar {
+    font-size: 1.6rem;
+    padding: 1rem;
+    margin-top: 1rem;
+    width: 13rem;
+    border-style:hidden;
+    border-radius: 1.2rem;
+    color:white;
+    cursor: pointer;
+    background-color: #fa8fb1;
+    margin-bottom: 1.2rem;
+}
+
+.ver-mas {
+    font-size: 1.6rem;
+    padding: 1rem;
+    margin-top: 1rem;
+    width: 13rem;
+    border-style:hidden;
+    border-radius: 1.2rem;
+    color:#fa8fb1;
+    cursor: pointer;
+    background-color: #ffe4ec;
+    margin-bottom: 1.2rem;
+}
+.contenedor-botones {
+    display: flex;
+    justify-content: space-around;
+    width: 95%;
 }
