--- a/src/components/OrderForm/OrderForm.css
+++ b/src/components/OrderForm/OrderForm.css
@@ -9,7 +9,7 @@
     cursor: pointer;
     background-color: rgba(250, 143, 177, 0.8);
     transition: 0.5s;
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.4rem;
 }
 
 .confirmar-datos-pagar:hover {
@@ -40,7 +40,7 @@
     border: 0;
     outline: none;
     border-bottom: 1px solid silver;
-    font-size: 1.7rem
+    font-size: 1.7rem;
 }
 
 .label-form {
