correcciones entrega final

--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -20,7 +20,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.div {
+.return-item-detail {
     margin-top: 4rem;
     display: flex;
     justify-content: center;
