--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -3,18 +3,21 @@
     background-size: cover;
     width: 28.1rem;
     height: 39rem;
-    border-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-top-left-radius: 1rem;
 }
 
 .title {
-    font-size: 2.3rem;
+    padding: 0.8rem;
+    font-size: 2.2rem;
     text-transform: uppercase;
     font-weight: 700;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Rubik', sans-serif;
 }
 
 .price {
-    font-family: 'Open Sans', sans-serif;
+    padding-bottom: 1rem;
+    font-family: 'Rubik', sans-serif;
     font-size: 2.6rem;
     font-weight: 700;
 }
@@ -32,7 +35,7 @@
     font-size: 1.6rem;
     padding: 1rem;
     margin-top: 1rem;
-    width: 13rem;
+    width: 12.5rem;
     border-style:hidden;
     border-radius: 1.2rem;
     color:white;
@@ -51,7 +54,7 @@
     font-size: 1.6rem;
     padding: 1rem;
     margin-top: 1rem;
-    width: 13rem;
+    width: 12.5rem;
     border-style:hidden;
     border-radius: 1.2rem;
     color:#fa8fb1;
